--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,77 @@ p {
     margin: 0;
 }
 
+div#debug_side {
+    color: white;
+    position: absolute;
+    top: 0px;
+    left: -370px;
+    height: calc(100% - 20px);
+    width: 350px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.25);
+    transition: 0.25s ease all;
+}
+div#debug_side.open {
+    left: 0px;
+}
+
+div#debug_side a{
+    position: absolute;
+    top: 0px;
+    background: rgba(0,0,0,0.5);
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    justify-content:center;
+    align-items: center;
+    display: flex;
+    right: -40px;
+}
+
+div#debug_side.open a{
+    right: 0px;
+    transition: 0.25s ease all;
+}
+
+div#debug_side .debug_inner {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 5px
+}
 .eventLogItem:hover {
     background: rgba(255,255,255,0.1);
+}
+
+
+p.eventLogItem {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 2px 5px;
+    cursor: context-menu;
+     border-left: 2px solid transparent; 
+}
+
+p.eventLogItem:hover {
+    background: rgba(0, 0, 0, 0.75);
+    border-left: 2px solid green; 
+    transform: scale(1.025);
+    transition: 0.15s ease all!important;
+}
+
+div#events_log {
+    padding: 5px;
+    height: 50%;
+    width: calc(100% - 10px);
+    overflow: hidden;
+    overflow-y: scroll;
+    display: block;
+    background: rgba(0,0,0,0.25);
+}
+
+
+.titleMenu {
+    background: rgba(61, 129, 255, 0.16);
+    padding: 2px 5px;
+    margin: 2px 0;
 }
